syntax = "proto3";

import "EntityType.proto";
option java_package = "org.sq.gameDemo.common.proto";
option java_outer_classname = "EntityProto";

//场景实体 npc 野怪
message SenceEntity {
   int32 id = 1;
   int32 senceId = 2;
   int32 num = 3; //之后版本需要就去掉。。。
   int32 state = 4;
   repeated EntityType type = 5;
}
//请求
message RequestInfo {
    uint64 msg_id = 1;      //消息id
    uint64 time = 2;        //时间戳(单位:毫秒)
    int32 typeId = 3;
    int32 senceId = 4;
}
//响应
message ResponseInfo {
    uint64 msg_id = 1;      //消息id
    int32 result  = 2;
    uint64 time = 3;        //时间戳
    string content = 4;
    repeated SenceEntity SenceEntity = 5;
}

